name:                MultiGridRepa
version:             0.1.0.0
synopsis:            Multgrid Poisson solver.
homepage:            https://github.com/chrisreade/MultiGridRepa
author:              Chris Reade
maintainer:          chrisreade@mac.com
copyright:           Chris Reade 2014
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable MultiGridRepa
  main-is:             poissonTest.hs
  other-extensions:    BangPatterns,
                       TemplateHaskell,
                       QuasiQuotes,
                       ScopedTypeVariables
  build-depends:       base >=4.7 && < 4.8,
                       repa >=3.2 && < 3.3,
                       repa-io >= 3.2 && < 3.3,
                       repa-algorithms >= 3.2 && < 3.3
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -fllvm
                       -O2
